# selenium-golf-reservation

./: date_time_selection_test.py  kakao_send.py  kakao_token.json  login.html  login_test.py  main copy.py  main.py  main_test.py  pyproject.toml  select_date.html  submit.html
html/: login.html  reservation.html  reservation_table.html
