[project]
name = "selenium-project"
version = "0.1.0"
description = ""
authors = [
    {name = "basisp",email = "minsang007@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
